# nous

./: Cargo.toml  NOTES.md  README.md  flake.nix
.config/: hakari.toml
benches/: benchmark.rs
crates/nous-cli/: Cargo.toml
crates/nous-cli/src/: main.rs
crates/nous-common/: Cargo.toml
crates/nous-common/benches/: benchmark.rs
crates/nous-common/src/: lib.rs
crates/nous-workspace-hack/: Cargo.toml
nix/checks/: default.nix  hakari.nix  taplo.nix
nix/pkgs/: default.nix
nix/pkgs/nous/: default.nix
nix/shell/: default.nix
nix/shell/vale/: default.nix
src/: cli.rs  main.rs
src/lib/: mod.rs  store.rs
test/: test.md
