[package]
name = "rust"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.53", default-features = false, features = ["color", "derive", "help", "std", "suggestions", "usage"] }
color-eyre = { version = "0.6.5", default-features = false }
thiserror = { version = "2.0.17", default-features = false, features = ["std"] }
walkdir = { version = "2.5.0", default-features = false }

[dev-dependencies]
criterion = "0.8.0"
proptest = "1.9.0"
proptest-derive = "0.7.0"

[lib]
name = "libnous"
path = "src/lib/mod.rs"

[[bin]]
name = "nous"
path = "src/main.rs"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort" # NOTE: Causes false positives on no-panic

