[workspace]
resolver = "2"
# Note that we define member crates with a wildcard here and NOT with explicit
# paths because the flake.nix is written in a way such that the top-level member
# (`nous-cli`) is built as a separate derivation which avoids being rebuilt if
# other package sources change.
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

[workspace.metadata.crane]
name = "nous"
